--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 /* FONDO INICIAL ROSADO */
 body {
-  display:flex; flex-direction:column; align-items:center; justify-content:center;
+  display:flex; justify-content:center; align-items:center;
   min-height:100vh; background-color:#ffb6c1; transition: background 1s;
 }
 
@@ -60,42 +60,47 @@ body {
   background-size: cover;
   border-radius:20px;
   width:90%; max-width:550px; min-height:600px;
-  padding:40px 30px 30px 30px;
+  padding:30px; /* todo el contenido dentro del borde */
   box-shadow:0 30px 60px rgba(0,0,0,0.8);
-  opacity:0; transition:all 1.8s cubic-bezier(0.34,1.56,0.64,1);
+  opacity:0; transform: scale(0.8);
+  transition: transform 1s cubic-bezier(0.34,1.56,0.64,1), opacity 1s ease;
   position:relative; z-index:10; border:3px solid rgba(255,111,145,0.5);
-  display:flex; flex-direction:column; overflow:hidden;
+  display:flex; flex-direction:column;
+  justify-content: flex-start; /* texto arriba, ramo abajo */
+  align-items: center;
+  overflow:hidden;
 }
 .letter::before {
   content:""; position:absolute; inset:0; background: rgba(0,0,0,0.25); border-radius:20px; z-index:1;
 }
-.letter.show { opacity:1; }
+.letter.show { opacity:1; transform: scale(1); }
 
 /* CONTENIDO INTERNO */
 .letter h1 {
-  color:#ff99b8; margin-bottom:18px; text-align:center; font-size:28px;
+  color:#ff99b8; margin-bottom:18px; font-size:28px;
   text-shadow:0 3px 15px rgba(255,111,145,0.6); font-weight:600;
-  position:relative; z-index:2;
+  position:relative; z-index:2; text-align:center;
 }
 .letter img {
-  width:100%; max-width:300px; display:block; margin:0 auto 18px auto;
+  width:100%; max-width:300px; display:block; margin-bottom:18px;
   border-radius:12px; box-shadow:0 8px 25px rgba(0,0,0,0.5);
   border:3px solid rgba(255,139,171,0.5); position:relative; z-index:2;
 }
 
 /* MENSAJE */
 #message {
-  color:#ffd6e0; font-size:17px; line-height:1.7; text-align:center; min-height:220px;
-  margin:25px 0 35px 0; text-shadow:0 2px 5px rgba(0,0,0,0.8); font-weight:400;
+  color:#ffd6e0; font-size:17px; line-height:1.7; text-align:center; min-height:180px;
+  margin:20px 0; text-shadow:0 2px 5px rgba(0,0,0,0.8); font-weight:400;
   word-wrap:break-word; overflow-wrap:break-word; width:100%; position:relative; z-index:2;
 }
 
-/* RAMO */
+/* RAMO AL FINAL */
 .bouquet-container {
-  width:130px; max-height:200px; margin:15px auto 0 auto; position:relative; opacity:0;
-  animation:fadeInBouquet 1s ease forwards 2s; z-index:2; filter:drop-shadow(0 6px 15px rgba(0,0,0,0.5));
+  width:130px; max-height:200px; margin-top:auto; /* empuja ramo al final */
+  position:relative; opacity:0; animation:fadeInBouquet 1s ease forwards 2s;
+  z-index:2; filter:drop-shadow(0 6px 15px rgba(0,0,0,0.5));
 }
-@keyframes fadeInBouquet {0%{opacity:0; transform:translateY(20px) scale(0.9);}100%{opacity:1; transform:translateY(0) scale(1);}}
+@keyframes fadeInBouquet {0%{opacity:0; transform:scale(0.9);}100%{opacity:1; transform:scale(1);}}
 .bouquet-wrapper { position:relative; width:100%; animation:breathe 3.5s ease-in-out infinite 3s; }
 @keyframes breathe {0%,100%{transform:scale(1);}50%{transform:scale(1.05);}}
 
@@ -111,19 +116,19 @@ body {
 .bouquet-aspect-ratio{position:relative;width:100%;padding-bottom:120%;}
 .bouquet-part{position:absolute;top:0;left:0;width:100%;height:100%;background-size:contain;background-position:center;background-repeat:no-repeat;}
 .bouquet-flowers{background-image:url('ramo-flores.png'); clip-path:polygon(0 0,100% 0,100% 50%,0 50%); animation:revealFlowers 1s ease-out forwards; animation-delay:2.2s; opacity:0;}
-@keyframes revealFlowers {0%{opacity:0; transform:translateY(-20px) scale(0.8);}100%{opacity:1; transform:translateY(0) scale(1);}}
+@keyframes revealFlowers {0%{opacity:0; transform:scale(0.8);}100%{opacity:1; transform:scale(1);}}
 .bouquet-stems{background-image:url('ramo-stems.png'); clip-path:polygon(0 50%,100% 50%,100% 85%,0 85%); animation:revealStems 0.8s ease-out forwards; animation-delay:2.8s; opacity:0; transform-origin:center top;}
 @keyframes revealStems {0%{opacity:0; transform:scaleY(0);}100%{opacity:1; transform:scaleY(1);}}
 .bouquet-bow{background-image:url('ramo-bow.png'); clip-path:polygon(0 85%,100% 85%,100% 100%,0 100%); animation:revealBow 0.6s cubic-bezier(0.68,-0.55,0.265,1.55) forwards; animation-delay:3.3s; opacity:0;}
-@keyframes revealBow {0%{opacity:0; transform:scale(0) rotate(-180deg);}70%{transform:scale(1.15) rotate(10deg);}100%{opacity:1; transform:scale(1) rotate(0deg);}}
+@keyframes revealBow {0%{opacity:0; transform:scale(0);}70%{transform:scale(1.15) rotate(10deg);}100%{opacity:1; transform:scale(1) rotate(0deg);}}
 
 /* RESPONSIVE */
 @media(max-width:600px){
   .envelope-container{width:280px;height:190px;}
-  .letter{padding:30px 22px 25px 22px; max-width:95%;}
+  .letter{padding:20px; max-width:95%;}
   .letter h1{font-size:24px; margin-bottom:15px;}
   .letter img{max-width:260px;margin-bottom:15px;}
-  #message{font-size:15px; min-height:200px; line-height:1.6; margin:20px 0 30px 0;}
+  #message{font-size:15px; min-height:160px; margin:15px 0;}
   .bouquet-container{width:110px;}
   .heart{font-size:16px;}
 }
