--- a/index.html
+++ b/index.html
@@ -2,142 +2,220 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Para ti 💌</title>
 <style>
-* { margin:0; padding:0; box-sizing:border-box; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
 
-/* FONDO INICIAL ROSADO */
 body {
-  display:flex; justify-content:center; align-items:center;
-  min-height:100vh; background-color:#ffb6c1; transition: background 1s;
+  min-height: 100vh;
+  background: #f8b4c6;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  overflow-x: hidden;
+  transition: background 1.5s ease;
+}
+
+body.opened {
+  background-color: #111;
+  background-image:
+    repeating-linear-gradient(45deg, #ff6f9133 0 2px, transparent 2px 20px),
+    repeating-linear-gradient(-45deg, #8bd3c733 0 2px, transparent 2px 20px);
 }
 
 /* TEXTO HINT */
 .hint {
-  color:white; font-size:22px; margin-bottom:40px;
-  text-shadow:0 3px 15px rgba(0,0,0,0.4);
-  animation: float 2s ease-in-out infinite; position:relative; z-index:10;
+  color: white;
+  font-size: 20px;
+  margin-bottom: 30px;
+  text-shadow: 0 2px 10px rgba(0,0,0,0.3);
+  animation: float 2s infinite;
+  transition: all 0.8s;
 }
-.hint.hide { opacity:0; transform:translateY(-30px); pointer-events:none; }
-@keyframes float {0%,100%{transform:translateY(0);}50%{transform:translateY(-10px);}}
+
+.hint.hide {
+  opacity: 0;
+  transform: translateY(-30px);
+}
+
+@keyframes float {
+  0%, 100% { transform: translateY(0); }
+  50% { transform: translateY(-8px); }
+}
+
+/* CONTENEDOR SOBRE */
+.envelope-container {
+  width: 320px;
+  height: 220px;
+  position: relative;
+  cursor: pointer;
+  margin-bottom: 50px;
+  z-index: 2;
+}
 
 /* SOBRE */
-.envelope-container {
-  width:320px; height:220px; position:relative; cursor:pointer; margin-bottom:50px; z-index:10;
-  transition: all 0.3s, opacity 1s 1.2s;
-}
-.envelope-container:hover { transform: scale(1.03); }
-.envelope-container.open { pointer-events:none; opacity:0; }
-
 .envelope {
-  width:100%; height:100%; border-radius:10px; position:relative; overflow:hidden;
-  background:linear-gradient(135deg,#ff6f91 0%,#ff8fab 100%);
-  box-shadow:0 15px 40px rgba(0,0,0,0.3); animation:idle 3s ease-in-out infinite;
+  width: 100%;
+  height: 100%;
+  background: #ff6f91;
+  border-radius: 8px;
+  position: relative;
+  overflow: hidden;
+  box-shadow: 0 15px 35px rgba(0,0,0,0.3);
+  transition: transform 0.3s;
+  animation: idle 3s infinite ease-in-out;
 }
-@keyframes idle {0%,100%{transform:translateY(0);}50%{transform:translateY(-5px);}}
 
+.envelope:hover {
+  transform: scale(1.02);
+}
+
+@keyframes idle {
+  0%, 100% { transform: scale(1); }
+  50% { transform: scale(1.05); }
+}
+
+/* SOLAPA DEL SOBRE */
 .flap {
-  position:absolute; top:0; left:0; width:100%; height:100%;
-  background:linear-gradient(180deg,#ff8fab 0%,#ffa3bd 100%);
-  clip-path: polygon(0 0,100% 0,50% 50%);
-  transform-origin:top center;
-  transition: transform 1.2s cubic-bezier(0.68,-0.55,0.265,1.55); z-index:3;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #ff8fab;
+  clip-path: polygon(0 0, 100% 0, 50% 50%);
+  transform-origin: top center;
+  transition: transform 1.2s ease;
+  z-index: 3;
 }
-.envelope-container.open .envelope { animation:chest 1s ease-in-out forwards; }
-.envelope-container.open .flap { transform:rotateX(180deg); }
-@keyframes chest {0%{transform:scale(1) rotate(0deg);}30%{transform:scale(1.1) rotate(3deg);}50%{transform:scale(1.15) rotate(-3deg);}70%{transform:scale(1.1) rotate(2deg);}100%{transform:scale(1) rotate(0deg);}}
 
-/* WRAPPER PARA CENTRAR CARTA */
-.letter-wrapper {
-  display:flex; justify-content:center; align-items:center;
-  width:100%; max-width:600px; margin:0 auto; position:relative;
+.envelope-container.open .envelope {
+  animation: chest 1s forwards;
+}
+
+.envelope-container.open .flap {
+  transform: rotateX(180deg);
+}
+
+@keyframes chest {
+  0% { transform: scale(1); }
+  30% { transform: scale(1.1) rotate(2deg); }
+  50% { transform: scale(1.15) rotate(-2deg); }
+  70% { transform: scale(1.1) rotate(2deg); }
+  100% { transform: scale(1); }
 }
 
 /* CARTA */
 .letter {
-  background: url('fondo-carta.png') no-repeat center center;
-  background-size: cover;
-  border-radius:20px;
-  width:90%; max-width:550px; min-height:600px;
-  padding:30px; /* todo el contenido dentro del borde */
-  box-shadow:0 30px 60px rgba(0,0,0,0.8);
-  opacity:0; transform: scale(0.8);
-  transition: transform 1s cubic-bezier(0.34,1.56,0.64,1), opacity 1s ease;
-  position:relative; z-index:10; border:3px solid rgba(255,111,145,0.5);
-  display:flex; flex-direction:column;
-  justify-content: flex-start; /* texto arriba, ramo abajo */
-  align-items: center;
-  overflow:hidden;
+  background-color: #fefefe;
+  padding: 40px 30px;
+  border-radius: 15px;
+  max-width: 550px;
+  width: 90%;
+  margin: 0 auto;
+  box-shadow: 0 25px 50px rgba(0,0,0,0.4);
+  transform: translateY(100px);
+  opacity: 0;
+  transition: all 1.5s ease;
 }
-.letter::before {
-  content:""; position:absolute; inset:0; background: rgba(0,0,0,0.25); border-radius:20px; z-index:1;
-}
-.letter.show { opacity:1; transform: scale(1); }
 
-/* CONTENIDO INTERNO */
+.letter.show {
+  transform: translateY(0);
+  opacity: 1;
+}
+
 .letter h1 {
-  color:#ff99b8; margin-bottom:18px; font-size:28px;
-  text-shadow:0 3px 15px rgba(255,111,145,0.6); font-weight:600;
-  position:relative; z-index:2; text-align:center;
+  color: #d6336c;
+  margin-bottom: 25px;
+  text-align: center;
+  font-size: 28px;
 }
+
+/* IMAGEN */
 .letter img {
-  width:100%; max-width:300px; display:block; margin-bottom:18px;
-  border-radius:12px; box-shadow:0 8px 25px rgba(0,0,0,0.5);
-  border:3px solid rgba(255,139,171,0.5); position:relative; z-index:2;
+  width: 100%;
+  max-width: 400px;
+  display: block;
+  margin: 20px auto;
+  border-radius: 12px;
+  box-shadow: 0 8px 20px rgba(0,0,0,0.2);
 }
 
-/* MENSAJE */
+/* MENSAJE CON EFECTO TYPEWRITER */
 #message {
-  color:#ffd6e0; font-size:17px; line-height:1.7; text-align:center; min-height:180px;
-  margin:20px 0; text-shadow:0 2px 5px rgba(0,0,0,0.8); font-weight:400;
-  word-wrap:break-word; overflow-wrap:break-word; width:100%; position:relative; z-index:2;
+  color: #333;
+  font-size: 18px;
+  line-height: 1.8;
+  text-align: center;
+  min-height: 120px;
+  margin: 25px 0;
 }
 
-/* RAMO AL FINAL */
+body.opened #message {
+  color: #ffd6e0;
+}
+
+/* RAMO DE FLORES SVG */
+.bouquet {
+  width: 200px;
+  margin: 30px auto 0;
+  display: block;
+  opacity: 0;
+  animation: fadeInBouquet 2s ease forwards 1s;
+}
+
+@keyframes fadeInBouquet {
+  to { opacity: 1; }
+}
+
 .bouquet-container {
-  width:130px; max-height:200px; margin-top:auto; /* empuja ramo al final */
-  position:relative; opacity:0; animation:fadeInBouquet 1s ease forwards 2s;
-  z-index:2; filter:drop-shadow(0 6px 15px rgba(0,0,0,0.5));
-}
-@keyframes fadeInBouquet {0%{opacity:0; transform:scale(0.9);}100%{opacity:1; transform:scale(1);}}
-.bouquet-wrapper { position:relative; width:100%; animation:breathe 3.5s ease-in-out infinite 3s; }
-@keyframes breathe {0%,100%{transform:scale(1);}50%{transform:scale(1.05);}}
-
-/* CORAZONES */
-.hearts { position:absolute; top:-35px; left:0; width:100%; height:40px; pointer-events:none; z-index:2; overflow:hidden; }
-.heart { position:absolute; font-size:18px; animation:floatHeart 3.5s ease-in-out infinite; opacity:0; filter:drop-shadow(0 2px 6px rgba(0,0,0,0.4)); }
-.heart:nth-child(1){ left:10%; animation-delay:3.5s; } 
-.heart:nth-child(2){ left:50%; animation-delay:4.2s; } 
-.heart:nth-child(3){ left:85%; animation-delay:4.9s; }
-@keyframes floatHeart {0%{transform:translateY(0) scale(0);opacity:0;}20%{transform:translateY(-18px) scale(1);opacity:1;}80%{opacity:0.9;}100%{transform:translateY(-45px) scale(1.3);opacity:0;}}
-
-/* RAMO PARTES */
-.bouquet-aspect-ratio{position:relative;width:100%;padding-bottom:120%;}
-.bouquet-part{position:absolute;top:0;left:0;width:100%;height:100%;background-size:contain;background-position:center;background-repeat:no-repeat;}
-.bouquet-flowers{background-image:url('ramo-flores.png'); clip-path:polygon(0 0,100% 0,100% 50%,0 50%); animation:revealFlowers 1s ease-out forwards; animation-delay:2.2s; opacity:0;}
-@keyframes revealFlowers {0%{opacity:0; transform:scale(0.8);}100%{opacity:1; transform:scale(1);}}
-.bouquet-stems{background-image:url('ramo-stems.png'); clip-path:polygon(0 50%,100% 50%,100% 85%,0 85%); animation:revealStems 0.8s ease-out forwards; animation-delay:2.8s; opacity:0; transform-origin:center top;}
-@keyframes revealStems {0%{opacity:0; transform:scaleY(0);}100%{opacity:1; transform:scaleY(1);}}
-.bouquet-bow{background-image:url('ramo-bow.png'); clip-path:polygon(0 85%,100% 85%,100% 100%,0 100%); animation:revealBow 0.6s cubic-bezier(0.68,-0.55,0.265,1.55) forwards; animation-delay:3.3s; opacity:0;}
-@keyframes revealBow {0%{opacity:0; transform:scale(0);}70%{transform:scale(1.15) rotate(10deg);}100%{opacity:1; transform:scale(1) rotate(0deg);}}
-
-/* RESPONSIVE */
-@media(max-width:600px){
-  .envelope-container{width:280px;height:190px;}
-  .letter{padding:20px; max-width:95%;}
-  .letter h1{font-size:24px; margin-bottom:15px;}
-  .letter img{max-width:260px;margin-bottom:15px;}
-  #message{font-size:15px; min-height:160px; margin:15px 0;}
-  .bouquet-container{width:110px;}
-  .heart{font-size:16px;}
+  animation: breathe 4s ease-in-out infinite;
 }
 
-/* FONDO AL ABRIR */
-body.opened {
-  background-color:#ffb6c1;
-  background-image:url('fondo-flores.jpg');
-  background-size:contain; background-repeat:no-repeat; background-position:center top;
+@keyframes breathe {
+  0%, 100% { transform: scale(1); }
+  50% { transform: scale(1.05); }
+}
+
+.draw {
+  fill: none;
+  stroke: #ff6f91;
+  stroke-width: 4;
+  stroke-linecap: round;
+  stroke-dasharray: 300;
+  stroke-dashoffset: 300;
+  animation: drawLine 3s ease forwards 0.5s;
+}
+
+@keyframes drawLine {
+  to { stroke-dashoffset: 0; }
+}
+
+/* Responsive */
+@media (max-width: 600px) {
+  .envelope-container {
+    width: 280px;
+    height: 190px;
+  }
+  
+  .letter {
+    padding: 30px 20px;
+  }
+  
+  .letter h1 {
+    font-size: 24px;
+  }
+  
+  #message {
+    font-size: 16px;
+  }
 }
 </style>
 </head>
@@ -146,54 +224,62 @@ body.opened {
 <h2 class="hint" id="hint">Haz click en la carta 💌</h2>
 
 <div class="envelope-container" id="envelopeContainer">
-  <div class="envelope"><div class="flap"></div></div>
-</div>
-
-<div class="letter-wrapper">
-  <div class="letter" id="letter">
-    <h1>Hola mi amor 💕</h1>
-    <img src="foto.jpg" alt="Para ti">
-    <div id="message"></div>
-    <div class="bouquet-container">
-      <div class="hearts">
-        <span class="heart">💕</span>
-        <span class="heart">💗</span>
-        <span class="heart">💖</span>
-      </div>
-      <div class="bouquet-wrapper">
-        <div class="bouquet-aspect-ratio">
-          <div class="bouquet-part bouquet-flowers"></div>
-          <div class="bouquet-part bouquet-stems"></div>
-          <div class="bouquet-part bouquet-bow"></div>
-        </div>
-      </div>
-    </div>
+  <div class="envelope">
+    <div class="flap"></div>
   </div>
 </div>
 
+<div class="letter" id="letter">
+  <h1>Hola mi amor 💕</h1>
+  <img src="foto.jpg" alt="Para ti">
+  <div id="message"></div>
+  
+  <svg class="bouquet" viewBox="0 0 300 220">
+    <g class="bouquet-container">
+      <line class="draw" x1="150" y1="90" x2="150" y2="200"/>
+      <line class="draw" x1="130" y1="100" x2="140" y2="200"/>
+      <line class="draw" x1="170" y1="100" x2="160" y2="200"/>
+      <circle class="draw" cx="150" cy="70" r="22"/>
+      <circle class="draw" cx="130" cy="90" r="20"/>
+      <circle class="draw" cx="170" cy="90" r="20"/>
+      <circle class="draw" cx="150" cy="50" r="18"/>
+    </g>
+  </svg>
+</div>
+
 <script>
-const message = "Esta pagina es solo para ti. Gracias por estar conmigo. Te quiero mas de lo que estas palabras pueden decir.";
-let charIndex=0;
+const message = `Esta pagina es solo para ti.
+Gracias por estar conmigo.
+Te quiero mas de lo que estas palabras pueden decir.`;
+
+let charIndex = 0;
+
 function typeWriter() {
-  if(charIndex<message.length){
-    const char=message.charAt(charIndex);
-    document.getElementById("message").innerHTML+=char==="\n"?"<br>":char;
+  if (charIndex < message.length) {
+    const char = message.charAt(charIndex);
+    document.getElementById("message").innerHTML += 
+      char === "\n" ? "<br>" : char;
     charIndex++;
-    setTimeout(typeWriter,60);
+    setTimeout(typeWriter, 60);
   }
 }
 
-document.getElementById("envelopeContainer").onclick=function(){
-  if(this.classList.contains("open")) return;
+document.getElementById("envelopeContainer").onclick = function() {
+  // Abrir sobre
   this.classList.add("open");
-  this.style.cursor="default";
+  
+  // Cambiar fondo
   document.body.classList.add("opened");
+  
+  // Ocultar hint
   document.getElementById("hint").classList.add("hide");
-  setTimeout(()=>{this.style.display="none";},1500);
-  setTimeout(()=>{
+  
+  // Mostrar carta después de la animación del sobre
+  setTimeout(() => {
     document.getElementById("letter").classList.add("show");
-    setTimeout(typeWriter,800);
-  },1200);
+    // Iniciar efecto typewriter
+    setTimeout(typeWriter, 500);
+  }, 1200);
 };
 </script>
 
