--- a/index.html
+++ b/index.html
@@ -4,13 +4,9 @@
 <meta charset="UTF-8">
 <title>Para ti 💌</title>
 <style>
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
+* { margin:0; padding:0; box-sizing:border-box; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }
 
+/* FONDO INICIAL ROSADO */
 body {
   min-height: 100vh;
   background: #f8b4c6;
@@ -23,11 +19,13 @@ body {
   transition: background 1.5s ease;
 }
 
+/* FONDO AL ABRIR */
 body.opened {
   background-color: #111;
-  background-image:
-    repeating-linear-gradient(45deg, #ff6f9133 0 2px, transparent 2px 20px),
-    repeating-linear-gradient(-45deg, #8bd3c733 0 2px, transparent 2px 20px);
+  background-image: url('fondo-flores.jpg');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center top;
 }
 
 /* TEXTO HINT */
@@ -46,11 +44,11 @@ body.opened {
 }
 
 @keyframes float {
-  0%, 100% { transform: translateY(0); }
+  0%,100% { transform: translateY(0); }
   50% { transform: translateY(-8px); }
 }
 
-/* CONTENEDOR SOBRE */
+/* SOBRE */
 .envelope-container {
   width: 320px;
   height: 220px;
@@ -60,7 +58,6 @@ body.opened {
   z-index: 2;
 }
 
-/* SOBRE */
 .envelope {
   width: 100%;
   height: 100%;
@@ -73,36 +70,26 @@ body.opened {
   animation: idle 3s infinite ease-in-out;
 }
 
-.envelope:hover {
-  transform: scale(1.02);
-}
+.envelope:hover { transform: scale(1.02); }
 
-@keyframes idle {
-  0%, 100% { transform: scale(1); }
-  50% { transform: scale(1.05); }
-}
+@keyframes idle { 0%,100% { transform: scale(1); } 50% { transform: scale(1.05); } }
 
-/* SOLAPA DEL SOBRE */
 .flap {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  top:0; left:0;
+  width:100%; height:100%;
   background: #ff8fab;
   clip-path: polygon(0 0, 100% 0, 50% 50%);
   transform-origin: top center;
   transition: transform 1.2s ease;
-  z-index: 3;
+  z-index:3;
 }
 
 .envelope-container.open .envelope {
   animation: chest 1s forwards;
 }
 
-.envelope-container.open .flap {
-  transform: rotateX(180deg);
-}
+.envelope-container.open .flap { transform: rotateX(180deg); }
 
 @keyframes chest {
   0% { transform: scale(1); }
@@ -123,7 +110,12 @@ body.opened {
   box-shadow: 0 25px 50px rgba(0,0,0,0.4);
   transform: translateY(100px);
   opacity: 0;
-  transition: all 1.5s ease;
+  transition: all 1s ease;
+  position: relative;
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .letter.show {
@@ -131,6 +123,12 @@ body.opened {
   opacity: 1;
 }
 
+.letter.hide {
+  opacity: 0;
+  transform: scale(0.8);
+}
+
+/* TEXTO Y IMAGEN */
 .letter h1 {
   color: #d6336c;
   margin-bottom: 25px;
@@ -138,7 +136,6 @@ body.opened {
   font-size: 28px;
 }
 
-/* IMAGEN */
 .letter img {
   width: 100%;
   max-width: 400px;
@@ -148,7 +145,6 @@ body.opened {
   box-shadow: 0 8px 20px rgba(0,0,0,0.2);
 }
 
-/* MENSAJE CON EFECTO TYPEWRITER */
 #message {
   color: #333;
   font-size: 18px;
@@ -158,64 +154,31 @@ body.opened {
   margin: 25px 0;
 }
 
-body.opened #message {
-  color: #ffd6e0;
-}
+body.opened #message { color: #ffd6e0; }
 
-/* RAMO DE FLORES SVG */
-.bouquet {
-  width: 200px;
-  margin: 30px auto 0;
-  display: block;
-  opacity: 0;
-  animation: fadeInBouquet 2s ease forwards 1s;
-}
-
-@keyframes fadeInBouquet {
-  to { opacity: 1; }
-}
-
+/* RAMO REAL */
 .bouquet-container {
-  animation: breathe 4s ease-in-out infinite;
+  width: 130px;
+  margin-top: 20px;
+  opacity: 0;
+  transition: opacity 1s ease;
 }
 
-@keyframes breathe {
-  0%, 100% { transform: scale(1); }
-  50% { transform: scale(1.05); }
+.bouquet-container.show { opacity:1; }
+
+.bouquet-part {
+  width: 100%;
+  height: auto;
+  display: block;
 }
 
-.draw {
-  fill: none;
-  stroke: #ff6f91;
-  stroke-width: 4;
-  stroke-linecap: round;
-  stroke-dasharray: 300;
-  stroke-dashoffset: 300;
-  animation: drawLine 3s ease forwards 0.5s;
-}
-
-@keyframes drawLine {
-  to { stroke-dashoffset: 0; }
-}
-
-/* Responsive */
-@media (max-width: 600px) {
-  .envelope-container {
-    width: 280px;
-    height: 190px;
-  }
-  
-  .letter {
-    padding: 30px 20px;
-  }
-  
-  .letter h1 {
-    font-size: 24px;
-  }
-  
-  #message {
-    font-size: 16px;
-  }
+/* RESPONSIVE */
+@media(max-width:600px) {
+  .envelope-container { width:280px; height:190px; }
+  .letter { padding:30px 20px; }
+  .letter h1 { font-size:24px; }
+  #message { font-size:16px; }
+  .bouquet-container { width:110px; }
 }
 </style>
 </head>
@@ -224,27 +187,19 @@ body.opened #message {
 <h2 class="hint" id="hint">Haz click en la carta 💌</h2>
 
 <div class="envelope-container" id="envelopeContainer">
-  <div class="envelope">
-    <div class="flap"></div>
-  </div>
+  <div class="envelope"><div class="flap"></div></div>
 </div>
 
 <div class="letter" id="letter">
   <h1>Hola mi amor 💕</h1>
   <img src="foto.jpg" alt="Para ti">
   <div id="message"></div>
-  
-  <svg class="bouquet" viewBox="0 0 300 220">
-    <g class="bouquet-container">
-      <line class="draw" x1="150" y1="90" x2="150" y2="200"/>
-      <line class="draw" x1="130" y1="100" x2="140" y2="200"/>
-      <line class="draw" x1="170" y1="100" x2="160" y2="200"/>
-      <circle class="draw" cx="150" cy="70" r="22"/>
-      <circle class="draw" cx="130" cy="90" r="20"/>
-      <circle class="draw" cx="170" cy="90" r="20"/>
-      <circle class="draw" cx="150" cy="50" r="18"/>
-    </g>
-  </svg>
+
+  <div class="bouquet-container" id="bouquetContainer">
+    <img class="bouquet-part" src="ramo-flores.png" alt="Flores">
+    <img class="bouquet-part" src="ramo-stems.png" alt="Tallos">
+    <img class="bouquet-part" src="ramo-bow.png" alt="Lazo">
+  </div>
 </div>
 
 <script>
@@ -253,12 +208,10 @@ Gracias por estar conmigo.
 Te quiero mas de lo que estas palabras pueden decir.`;
 
 let charIndex = 0;
-
 function typeWriter() {
-  if (charIndex < message.length) {
+  if(charIndex < message.length){
     const char = message.charAt(charIndex);
-    document.getElementById("message").innerHTML += 
-      char === "\n" ? "<br>" : char;
+    document.getElementById("message").innerHTML += char === "\n" ? "<br>" : char;
     charIndex++;
     setTimeout(typeWriter, 60);
   }
@@ -267,19 +220,24 @@ function typeWriter() {
 document.getElementById("envelopeContainer").onclick = function() {
   // Abrir sobre
   this.classList.add("open");
-  
+
   // Cambiar fondo
   document.body.classList.add("opened");
-  
+
   // Ocultar hint
   document.getElementById("hint").classList.add("hide");
-  
-  // Mostrar carta después de la animación del sobre
-  setTimeout(() => {
-    document.getElementById("letter").classList.add("show");
-    // Iniciar efecto typewriter
+
+  // Desaparecer carta antes de mostrar ramo
+  const letter = document.getElementById("letter");
+  letter.classList.add("hide");
+
+  // Mostrar carta y ramo después
+  setTimeout(()=>{
+    letter.classList.remove("hide");
+    letter.classList.add("show");
+    document.getElementById("bouquetContainer").classList.add("show");
     setTimeout(typeWriter, 500);
-  }, 1200);
+  },1200);
 };
 </script>
 
