--- a/index.html
+++ b/index.html
@@ -2,154 +2,180 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Para ti 💌</title>
 <style>
-* { margin:0; padding:0; box-sizing:border-box; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }
-
-/* FONDO INICIAL ROSADO */
-body {
-  min-height: 100vh;
-  background: #f8b4c6;
-  display:flex;
-  flex-direction:column;
-  align-items:center;
-  justify-content:center;
-  padding:20px;
-  overflow:hidden;
-  transition: background 1s ease;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-/* FONDO DE FLORES */
-body.opened {
-  background: url('fondo-flores.jpg') center center no-repeat;
-  background-size: cover;
+body {
+  min-height: 100vh;
+  background: #f8b4c6; /* fondo inicial rosado */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
 }
 
 /* TEXTO HINT */
 .hint {
-  color:white;
-  font-size:20px;
-  margin-bottom:30px;
-  text-shadow:0 2px 10px rgba(0,0,0,0.3);
+  color: white;
+  font-size: 20px;
+  margin-bottom: 30px;
+  text-shadow: 0 2px 10px rgba(0,0,0,0.3);
   animation: float 2s infinite;
   transition: all 0.8s;
+  z-index: 10;
 }
 .hint.hide {
-  opacity:0;
-  transform:translateY(-30px);
+  opacity: 0;
+  transform: translateY(-30px);
 }
 @keyframes float {
-  0%,100% { transform: translateY(0);}
-  50% { transform: translateY(-8px);}
+  0%,100% { transform: translateY(0); }
+  50% { transform: translateY(-8px); }
 }
 
 /* SOBRE */
 .envelope-container {
-  width:320px;
-  height:220px;
-  position:relative;
-  cursor:pointer;
-  margin-bottom:50px;
-  z-index:2;
+  width: 320px;
+  height: 220px;
+  position: relative;
+  cursor: pointer;
+  margin-bottom: 50px;
+  z-index: 2;
 }
 .envelope {
-  width:100%; height:100%;
-  background:#ff6f91;
-  border-radius:8px;
-  position:relative;
-  overflow:hidden;
-  box-shadow:0 15px 35px rgba(0,0,0,0.3);
+  width: 100%;
+  height: 100%;
+  background: #ff6f91;
+  border-radius: 8px;
+  position: relative;
+  overflow: hidden;
+  box-shadow: 0 15px 35px rgba(0,0,0,0.3);
   transition: transform 0.3s;
   animation: idle 3s infinite ease-in-out;
 }
-.envelope:hover { transform: scale(1.02);}
-@keyframes idle { 0%,100%{transform:scale(1);} 50%{transform:scale(1.05);} }
+.envelope:hover { transform: scale(1.02); }
+@keyframes idle { 0%,100%{transform:scale(1);}50%{transform:scale(1.05);} }
 .flap {
-  position:absolute; top:0; left:0; width:100%; height:100%;
-  background:#ff8fab;
-  clip-path: polygon(0 0,100% 0,50% 50%);
+  position: absolute;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  background: #ff8fab;
+  clip-path: polygon(0 0, 100% 0, 50% 50%);
   transform-origin: top center;
   transition: transform 1.2s ease;
-  z-index:3;
+  z-index: 3;
 }
-.envelope-container.open .envelope { animation: chest 1s forwards;}
-.envelope-container.open .flap { transform: rotateX(180deg);}
+.envelope-container.open .envelope { animation: chest 1s forwards; }
+.envelope-container.open .flap { transform: rotateX(180deg); }
 @keyframes chest {
-  0% { transform: scale(1);}
-  30%{ transform: scale(1.1) rotate(2deg);}
-  50%{ transform: scale(1.15) rotate(-2deg);}
-  70%{ transform: scale(1.1) rotate(2deg);}
-  100%{ transform: scale(1);}
+  0%{transform:scale(1);}30%{transform:scale(1.1) rotate(2deg);}50%{transform:scale(1.15) rotate(-2deg);}
+  70%{transform:scale(1.1) rotate(2deg);}100%{transform:scale(1);}
 }
 
-/* CARTA TRANSPARENTE */
+/* CARTA */
 .letter {
-  background: rgba(255,255,255,0); /* transparente */
+  position: relative;
+  background: transparent; /* carta transparente */
   padding: 40px 30px;
   border-radius: 15px;
   max-width: 550px;
   width: 90%;
-  margin:0 auto;
-  box-shadow:0 25px 50px rgba(0,0,0,0.2);
-  transform: scale(0.8);
-  opacity:0;
-  transition: all 1s ease;
-  display:flex;
-  flex-direction:column;
-  align-items:center;
-  text-align:center;
-  z-index:1;
+  margin: 0 auto;
+  box-shadow: 0 25px 50px rgba(0,0,0,0.4);
+  transform: scale(0.5);
+  opacity: 0;
+  transition: all 1.2s ease;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
+
+/* Fondo de flores dentro de la carta */
+.letter::before {
+  content:"";
+  position:absolute;
+  inset:0;
+  background: url('fondo-flores.jpg') no-repeat center center;
+  background-size: cover;
+  border-radius: 15px;
+  z-index: 0;
+}
+
+/* Contenido encima del fondo */
+.letter h1,
+.letter img,
+#message,
+.bouquet-container {
+  position: relative;
+  z-index: 1;
+}
+
 .letter.show {
   transform: scale(1);
-  opacity:1;
+  opacity: 1;
 }
 
-/* TEXTO E IMAGEN */
+/* TEXTO */
 .letter h1 {
-  color:#d6336c;
-  font-size:28px;
-  margin-bottom:20px;
-}
-.letter img {
-  max-width:350px;
-  width:100%;
-  border-radius:12px;
-  box-shadow:0 8px 20px rgba(0,0,0,0.2);
-  margin-bottom:20px;
-}
-#message {
-  color:#fff;
-  font-size:18px;
-  line-height:1.7;
-  min-height:120px;
-  margin-bottom:20px;
+  color: #d6336c;
+  margin-bottom: 25px;
+  text-align: center;
+  font-size: 28px;
 }
 
-/* RAMO REAL */
+/* FOTO */
+.letter img {
+  width: 100%;
+  max-width: 400px;
+  display: block;
+  margin: 20px auto;
+  border-radius: 12px;
+  box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+}
+
+/* MENSAJE TYPEWRITER */
+#message {
+  color: #333;
+  font-size: 18px;
+  line-height: 1.8;
+  text-align: center;
+  min-height: 120px;
+  margin: 25px 0;
+}
+
+/* RAMO DE FLORES PNG */
 .bouquet-container {
-  width:180px;
-  margin-top:10px;
-  opacity:0;
-  transform: scale(0.5);
+  width: 200px;
+  margin: 30px auto 0;
+  opacity: 0;
+  transform: scale(0);
   transition: all 1s ease;
 }
 .bouquet-container.show {
-  opacity:1;
+  opacity: 1;
   transform: scale(1);
 }
 .bouquet-container img {
-  width:100%;
-  display:block;
-  margin:0 auto;
+  width: 100%;
+  display: block;
 }
 
 /* RESPONSIVE */
-@media(max-width:600px){
-  .letter { padding:30px 20px; }
-  .letter h1 { font-size:24px;}
-  #message { font-size:16px;}
-  .bouquet-container { width:140px;}
+@media (max-width: 600px) {
+  .envelope-container { width: 280px; height: 190px; }
+  .letter { padding: 30px 20px; }
+  .letter h1 { font-size: 24px; }
+  #message { font-size: 16px; }
+  .bouquet-container { width: 160px; }
 }
 </style>
 </head>
@@ -158,17 +184,18 @@ body.opened {
 <h2 class="hint" id="hint">Haz click en la carta 💌</h2>
 
 <div class="envelope-container" id="envelopeContainer">
-  <div class="envelope"><div class="flap"></div></div>
+  <div class="envelope">
+    <div class="flap"></div>
+  </div>
 </div>
 
 <div class="letter" id="letter">
   <h1>Hola mi amor 💕</h1>
   <img src="foto.jpg" alt="Para ti">
   <div id="message"></div>
-
-  <!-- RAMO REAL -->
+  
   <div class="bouquet-container" id="bouquetContainer">
-    <img src="ramo-flores.png" alt="Ramo">
+    <img src="ramo-flores.png" alt="Ramo de flores">
   </div>
 </div>
 
@@ -177,30 +204,34 @@ const message = `Esta pagina es solo para ti.
 Gracias por estar conmigo.
 Te quiero mas de lo que estas palabras pueden decir.`;
 
-let charIndex=0;
-function typeWriter(){
-  if(charIndex<message.length){
+let charIndex = 0;
+
+function typeWriter() {
+  if(charIndex < message.length) {
     const char = message.charAt(charIndex);
-    document.getElementById("message").innerHTML += char==="\n"?"<br>":char;
+    document.getElementById("message").innerHTML += char === "\n" ? "<br>" : char;
     charIndex++;
-    setTimeout(typeWriter,50);
+    setTimeout(typeWriter, 60);
   }
 }
 
-document.getElementById("envelopeContainer").onclick = function(){
+document.getElementById("envelopeContainer").onclick = function() {
+  // Abrir sobre
   this.classList.add("open");
+  this.style.opacity = "0";
+  
+  // Ocultar hint
   document.getElementById("hint").classList.add("hide");
-  document.body.classList.add("opened");
-
-  // Mostrar carta y ramo desde el centro
-  const letter = document.getElementById("letter");
-  const bouquet = document.getElementById("bouquetContainer");
-
-  setTimeout(()=>{
-    letter.classList.add("show");
-    bouquet.classList.add("show");
-    setTimeout(typeWriter,500);
-  },1000);
+  
+  // Mostrar carta después de la animación del sobre
+  setTimeout(() => {
+    document.getElementById("letter").classList.add("show");
+    setTimeout(typeWriter, 500);
+    
+    // Mostrar ramo animado desde el centro
+    const ramo = document.getElementById("bouquetContainer");
+    setTimeout(()=>{ ramo.classList.add("show"); }, 800);
+  }, 1200);
 };
 </script>
 
