--- a/index.html
+++ b/index.html
@@ -5,16 +5,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Para ti 💌</title>
 <style>
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
+* { margin: 0; padding: 0; box-sizing: border-box; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }
 
 body {
   min-height: 100vh;
-  background: #f8b4c6; /* fondo inicial rosado */
+  background: #f8b4c6; /* fondo rosado inicial */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -33,65 +28,30 @@ body {
   transition: all 0.8s;
   z-index: 10;
 }
-.hint.hide {
-  opacity: 0;
-  transform: translateY(-30px);
-}
-@keyframes float {
-  0%,100% { transform: translateY(0); }
-  50% { transform: translateY(-8px); }
-}
+.hint.hide { opacity: 0; transform: translateY(-30px); }
+@keyframes float { 0%,100% {transform:translateY(0);} 50% {transform:translateY(-8px);} }
 
 /* SOBRE */
-.envelope-container {
-  width: 320px;
-  height: 220px;
-  position: relative;
-  cursor: pointer;
-  margin-bottom: 40px;
-  z-index: 2;
-}
-.envelope {
-  width: 100%;
-  height: 100%;
-  background: #ff6f91;
-  border-radius: 8px;
-  position: relative;
-  overflow: hidden;
-  box-shadow: 0 15px 35px rgba(0,0,0,0.3);
-  transition: transform 0.3s;
-  animation: idle 3s infinite ease-in-out;
-}
+.envelope-container { width: 320px; height: 220px; position: relative; cursor: pointer; margin-bottom: 40px; z-index: 2; }
+.envelope { width: 100%; height: 100%; background: #ff6f91; border-radius: 8px; position: relative; overflow: hidden; box-shadow: 0 15px 35px rgba(0,0,0,0.3); transition: transform 0.3s; animation: idle 3s infinite ease-in-out; }
 .envelope:hover { transform: scale(1.02); }
 @keyframes idle { 0%,100%{transform:scale(1);}50%{transform:scale(1.05);} }
-.flap {
-  position: absolute;
-  top: 0; left: 0;
-  width: 100%; height: 100%;
-  background: #ff8fab;
-  clip-path: polygon(0 0, 100% 0, 50% 50%);
-  transform-origin: top center;
-  transition: transform 1.2s ease;
-  z-index: 3;
-}
+.flap { position:absolute; top:0; left:0; width:100%; height:100%; background:#ff8fab; clip-path: polygon(0 0, 100% 0, 50% 50%); transform-origin:top center; transition: transform 1.2s ease; z-index:3; }
 .envelope-container.open .envelope { animation: chest 1s forwards; }
 .envelope-container.open .flap { transform: rotateX(180deg); }
-@keyframes chest {
-  0%{transform:scale(1);}30%{transform:scale(1.1) rotate(2deg);}50%{transform:scale(1.15) rotate(-2deg);}
-  70%{transform:scale(1.1) rotate(2deg);}100%{transform:scale(1);}
-}
+@keyframes chest {0%{transform:scale(1);}30%{transform:scale(1.1) rotate(2deg);}50%{transform:scale(1.15) rotate(-2deg);}70%{transform:scale(1.1) rotate(2deg);}100%{transform:scale(1); }}
 
 /* CARTA */
 .letter {
   position: relative;
   background: transparent; /* carta transparente */
-  padding: 25px 20px;
+  padding: 20px;
   border-radius: 15px;
-  max-width: 500px;
+  max-width: 460px;
   width: 90%;
   margin: 0 auto;
-  box-shadow: 0 25px 50px rgba(0,0,0,0.4);
-  transform: scale(0.6) translateY(0);
+  box-shadow: 0 20px 40px rgba(0,0,0,0.3);
+  transform: scale(0.55) translateY(0);
   opacity: 0;
   transition: all 1.2s ease;
   overflow: hidden;
@@ -115,30 +75,27 @@ body {
 .letter h1,
 .letter img,
 #message,
-.bouquet-container {
-  position: relative;
-  z-index: 1;
-}
+.bouquet-container { position: relative; z-index: 1; }
 
 .letter.show {
-  transform: scale(1) translateY(-50px); /* desplaza carta hacia arriba */
+  transform: scale(1) translateY(-120px); /* sube más */
   opacity: 1;
 }
 
 /* TEXTO */
 .letter h1 {
   color: #d6336c;
-  margin-bottom: 15px;
+  margin-bottom: 12px;
   text-align: center;
-  font-size: 24px;
+  font-size: 20px; /* más pequeño */
 }
 
 /* FOTO */
 .letter img {
-  width: 90%;
-  max-width: 300px;
+  width: 80%;
+  max-width: 250px; /* más pequeño */
   display: block;
-  margin: 15px auto;
+  margin: 12px auto;
   border-radius: 10px;
   box-shadow: 0 6px 15px rgba(0,0,0,0.2);
 }
@@ -146,17 +103,17 @@ body {
 /* MENSAJE TYPEWRITER */
 #message {
   color: #333;
-  font-size: 16px;
-  line-height: 1.6;
+  font-size: 14px; /* más pequeño */
+  line-height: 1.5;
   text-align: center;
-  min-height: 100px;
-  margin: 15px 0;
+  min-height: 80px;
+  margin: 12px 0;
 }
 
 /* RAMO DE FLORES PNG */
 .bouquet-container {
-  width: 150px;
-  margin: 20px auto 0;
+  width: 120px;
+  margin: 15px auto 0;
   opacity: 0;
   transform: scale(0);
   transition: all 1s ease;
@@ -174,11 +131,11 @@ body {
 /* RESPONSIVE */
 @media (max-width: 600px) {
   .envelope-container { width: 280px; height: 190px; }
-  .letter { padding: 20px 15px; max-width: 90%; }
-  .letter h1 { font-size: 20px; }
-  #message { font-size: 14px; }
-  .letter img { max-width: 250px; }
-  .bouquet-container { width: 120px; }
+  .letter { padding: 15px; max-width: 90%; }
+  .letter h1 { font-size: 18px; }
+  #message { font-size: 13px; }
+  .letter img { max-width: 200px; }
+  .bouquet-container { width: 100px; }
 }
 </style>
 </head>
