--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@ body {
 .letter {
   position: relative;
   background: transparent; /* carta transparente */
-  padding: 20px;
+  padding: 15px;
   border-radius: 15px;
-  max-width: 460px;
+  max-width: 420px;
   width: 90%;
   margin: 0 auto;
   box-shadow: 0 20px 40px rgba(0,0,0,0.3);
-  transform: scale(0.55) translateY(0);
+  transform: scale(0.5) translateY(0);
   opacity: 0;
   transition: all 1.2s ease;
   overflow: hidden;
@@ -78,24 +78,24 @@ body {
 .bouquet-container { position: relative; z-index: 1; }
 
 .letter.show {
-  transform: scale(1) translateY(-120px); /* sube más */
+  transform: scale(1) translateY(-240px); /* sube para ocupar el lugar del sobre */
   opacity: 1;
 }
 
 /* TEXTO */
 .letter h1 {
   color: #d6336c;
-  margin-bottom: 12px;
+  margin-bottom: 10px;
   text-align: center;
-  font-size: 20px; /* más pequeño */
+  font-size: 18px; /* más pequeño */
 }
 
 /* FOTO */
 .letter img {
-  width: 80%;
-  max-width: 250px; /* más pequeño */
+  width: 75%;
+  max-width: 200px; /* más pequeño */
   display: block;
-  margin: 12px auto;
+  margin: 10px auto;
   border-radius: 10px;
   box-shadow: 0 6px 15px rgba(0,0,0,0.2);
 }
@@ -103,17 +103,17 @@ body {
 /* MENSAJE TYPEWRITER */
 #message {
   color: #333;
-  font-size: 14px; /* más pequeño */
-  line-height: 1.5;
+  font-size: 13px; /* más pequeño */
+  line-height: 1.4;
   text-align: center;
-  min-height: 80px;
-  margin: 12px 0;
+  min-height: 60px;
+  margin: 10px 0;
 }
 
 /* RAMO DE FLORES PNG */
 .bouquet-container {
-  width: 120px;
-  margin: 15px auto 0;
+  width: 100px;
+  margin: 10px auto 0;
   opacity: 0;
   transform: scale(0);
   transition: all 1s ease;
@@ -131,11 +131,11 @@ body {
 /* RESPONSIVE */
 @media (max-width: 600px) {
   .envelope-container { width: 280px; height: 190px; }
-  .letter { padding: 15px; max-width: 90%; }
-  .letter h1 { font-size: 18px; }
-  #message { font-size: 13px; }
-  .letter img { max-width: 200px; }
-  .bouquet-container { width: 100px; }
+  .letter { padding: 10px; max-width: 90%; }
+  .letter h1 { font-size: 16px; }
+  #message { font-size: 12px; }
+  .letter img { max-width: 180px; }
+  .bouquet-container { width: 90px; }
 }
 </style>
 </head>
@@ -185,7 +185,7 @@ document.getElementById("envelopeContainer").onclick = function() {
     setTimeout(typeWriter, 500);
 
     const ramo = document.getElementById("bouquetContainer");
-    setTimeout(()=>{ ramo.classList.add("show"); }, 800);
+    setTimeout(()=>{ ramo.classList.add("show"); }, 700);
   }, 1200);
 };
 </script>
