--- a/index.html
+++ b/index.html
@@ -5,52 +5,100 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Para ti 💌</title>
 <style>
-* { margin: 0; padding: 0; box-sizing: border-box; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }
+/* RESET */
+* { margin:0; padding:0; box-sizing:border-box; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }
 
+/* BODY */
 body {
-  min-height: 100vh;
-  background: #f8b4c6; /* fondo rosado inicial */
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
-  padding: 20px;
-  overflow-x: hidden;
+  min-height:100vh;
+  background:#f8b4c6;
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  justify-content:center;
+  padding:20px;
+  overflow-x:hidden;
+  transition: background 1.5s ease;
 }
 
-/* TEXTO HINT */
+body.opened {
+  background:#f8b4c6; /* se mantiene rosado */
+}
+
+/* HINT */
 .hint {
-  color: white;
-  font-size: 20px;
-  margin-bottom: 20px;
-  text-shadow: 0 2px 10px rgba(0,0,0,0.3);
+  color:white;
+  font-size:20px;
+  margin-bottom:30px;
+  text-shadow:0 2px 10px rgba(0,0,0,0.3);
   animation: float 2s infinite;
   transition: all 0.8s;
-  z-index: 10;
 }
-.hint.hide { opacity: 0; transform: translateY(-30px); }
-@keyframes float { 0%,100% {transform:translateY(0);} 50% {transform:translateY(-8px);} }
+
+.hint.hide {
+  opacity:0;
+  transform: translateY(-30px);
+}
+
+@keyframes float { 0%,100%{transform:translateY(0);}50%{transform:translateY(-8px);} }
 
 /* SOBRE */
-.envelope-container { width: 320px; height: 220px; position: relative; cursor: pointer; margin-bottom: 40px; z-index: 2; }
-.envelope { width: 100%; height: 100%; background: #ff6f91; border-radius: 8px; position: relative; overflow: hidden; box-shadow: 0 15px 35px rgba(0,0,0,0.3); transition: transform 0.3s; animation: idle 3s infinite ease-in-out; }
+.envelope-container {
+  width:320px;
+  height:220px;
+  position:relative;
+  cursor:pointer;
+  margin-bottom:50px;
+  z-index:2;
+}
+
+.envelope {
+  width:100%;
+  height:100%;
+  background:#ff6f91;
+  border-radius:8px;
+  position:relative;
+  overflow:hidden;
+  box-shadow:0 15px 35px rgba(0,0,0,0.3);
+  transition: transform 0.3s;
+  animation: idle 3s infinite ease-in-out;
+}
+
 .envelope:hover { transform: scale(1.02); }
+
 @keyframes idle { 0%,100%{transform:scale(1);}50%{transform:scale(1.05);} }
-.flap { position:absolute; top:0; left:0; width:100%; height:100%; background:#ff8fab; clip-path: polygon(0 0, 100% 0, 50% 50%); transform-origin:top center; transition: transform 1.2s ease; z-index:3; }
+
+.flap {
+  position:absolute;
+  top:0; left:0; width:100%; height:100%;
+  background:#ff8fab;
+  clip-path: polygon(0 0, 100% 0, 50% 50%);
+  transform-origin: top center;
+  transition: transform 1.2s ease;
+  z-index:3;
+}
+
 .envelope-container.open .envelope { animation: chest 1s forwards; }
 .envelope-container.open .flap { transform: rotateX(180deg); }
-@keyframes chest {0%{transform:scale(1);}30%{transform:scale(1.1) rotate(2deg);}50%{transform:scale(1.15) rotate(-2deg);}70%{transform:scale(1.1) rotate(2deg);}100%{transform:scale(1); }}
+
+@keyframes chest {
+  0% { transform: scale(1); }
+  30% { transform: scale(1.1) rotate(2deg); }
+  50% { transform: scale(1.15) rotate(-2deg); }
+  70% { transform: scale(1.1) rotate(2deg); }
+  100% { transform: scale(1); }
+}
 
 /* CARTA */
 .letter {
   position: relative;
-  background: transparent; /* carta transparente */
-  padding: 15px;
+  background: transparent; /* transparente */
+  padding: 20px 15px 25px 15px;
   border-radius: 15px;
   max-width: 420px;
-  width: 90%;
+  width: 85%;
   margin: 0 auto;
-  box-shadow: 0 20px 40px rgba(0,0,0,0.3);
+  box-shadow: 0 15px 35px rgba(0,0,0,0.3);
   transform: scale(0.5) translateY(0);
   opacity: 0;
   transition: all 1.2s ease;
@@ -60,82 +108,62 @@ body {
   align-items: center;
 }
 
-/* Fondo de flores dentro de la carta */
-.letter::before {
-  content:"";
-  position:absolute;
-  inset:0;
-  background: url('fondo-flores.jpg') no-repeat center center;
-  background-size: cover;
-  border-radius: 15px;
-  z-index: 0;
-}
-
-/* Contenido encima del fondo */
-.letter h1,
-.letter img,
-#message,
-.bouquet-container { position: relative; z-index: 1; }
-
+/* Carta final */
 .letter.show {
-  transform: scale(1) translateY(-240px); /* sube para ocupar el lugar del sobre */
+  transform: scale(1) translateY(-240px); /* sube al lugar del sobre */
   opacity: 1;
 }
 
-/* TEXTO */
+/* CONTENIDO */
 .letter h1 {
-  color: #d6336c;
-  margin-bottom: 10px;
-  text-align: center;
-  font-size: 18px; /* más pequeño */
+  color:#d6336c;
+  font-size:22px;
+  text-align:center;
+  margin-bottom:15px;
 }
 
-/* FOTO */
 .letter img {
-  width: 75%;
-  max-width: 200px; /* más pequeño */
-  display: block;
-  margin: 10px auto;
-  border-radius: 10px;
-  box-shadow: 0 6px 15px rgba(0,0,0,0.2);
+  width: 80%;
+  max-width: 280px;
+  border-radius:10px;
+  box-shadow:0 5px 15px rgba(0,0,0,0.2);
+  margin-bottom:15px;
 }
 
-/* MENSAJE TYPEWRITER */
+/* MENSAJE */
 #message {
-  color: #333;
-  font-size: 13px; /* más pequeño */
-  line-height: 1.4;
-  text-align: center;
-  min-height: 60px;
-  margin: 10px 0;
+  font-size:16px;
+  color:#333;
+  line-height:1.6;
+  text-align:center;
+  min-height:80px;
 }
 
-/* RAMO DE FLORES PNG */
-.bouquet-container {
-  width: 100px;
-  margin: 10px auto 0;
-  opacity: 0;
+/* RAMO DE FLORES */
+.letter .bouquet-container {
+  width: 180px;
+  height: auto;
+  margin: 20px auto 0 auto;
+  background: url('ramo-flores.png') no-repeat center center;
+  background-size: contain;
+  opacity:0;
   transform: scale(0);
   transition: all 1s ease;
 }
-.bouquet-container.show {
-  opacity: 1;
+
+.letter.show .bouquet-container {
+  opacity:1;
   transform: scale(1);
-}
-.bouquet-container img {
-  width: 100%;
-  display: block;
-  border-radius: 10px;
 }
 
 /* RESPONSIVE */
 @media (max-width: 600px) {
   .envelope-container { width: 280px; height: 190px; }
-  .letter { padding: 10px; max-width: 90%; }
-  .letter h1 { font-size: 16px; }
-  #message { font-size: 12px; }
-  .letter img { max-width: 180px; }
-  .bouquet-container { width: 90px; }
+  .letter { max-width: 360px; padding:15px 12px 20px 12px; }
+  .letter h1 { font-size:20px; }
+  .letter img { max-width:220px; }
+  #message { font-size:14px; min-height:70px; }
+  .letter .bouquet-container { width: 140px; }
 }
 </style>
 </head>
@@ -143,50 +171,49 @@ body {
 
 <h2 class="hint" id="hint">Haz click en la carta 💌</h2>
 
+<!-- SOBRE -->
 <div class="envelope-container" id="envelopeContainer">
   <div class="envelope">
     <div class="flap"></div>
   </div>
 </div>
 
+<!-- CARTA -->
 <div class="letter" id="letter">
   <h1>Hola mi amor 💕</h1>
   <img src="foto.jpg" alt="Para ti">
   <div id="message"></div>
-  
-  <div class="bouquet-container" id="bouquetContainer">
-    <img src="ramo-flores.png" alt="Ramo de flores">
-  </div>
+  <div class="bouquet-container"></div>
 </div>
 
 <script>
+// MENSAJE TYPEWRITER
 const message = `Esta pagina es solo para ti.
 Gracias por estar conmigo.
 Te quiero mas de lo que estas palabras pueden decir.`;
 
 let charIndex = 0;
 function typeWriter() {
-  if(charIndex < message.length) {
+  if(charIndex < message.length){
     const char = message.charAt(charIndex);
     document.getElementById("message").innerHTML += char === "\n" ? "<br>" : char;
     charIndex++;
-    setTimeout(typeWriter, 60);
+    setTimeout(typeWriter,50);
   }
 }
 
-document.getElementById("envelopeContainer").onclick = function() {
-  this.classList.add("open");
-  this.style.opacity = "0";
-  document.getElementById("hint").classList.add("hide");
+// ABRIR SOBRE
+document.getElementById("envelopeContainer").onclick = function(){
+  this.classList.add("open"); // animar sobre
+  document.getElementById("hint").classList.add("hide"); // ocultar hint
+  document.body.classList.add("opened"); // fondo mantiene rosado
 
-  setTimeout(() => {
+  // Mostrar carta con transición
+  setTimeout(()=>{
     const letter = document.getElementById("letter");
     letter.classList.add("show");
-    setTimeout(typeWriter, 500);
-
-    const ramo = document.getElementById("bouquetContainer");
-    setTimeout(()=>{ ramo.classList.add("show"); }, 700);
-  }, 1200);
+    setTimeout(typeWriter,300);
+  },1200);
 };
 </script>
 
